# Linux-Shell

./: CMakeLists.txt  Makefile  README.md  basic.c  basic.h  batch.c  batch.h  commandState.h  constants.h  environment.c  environment.h  executer.c  executer.h  fileHandler.c  fileHandler.h  history.c  history.h  history.txt  interactive.c  interactive.h  logger.c  logger.h  logger.txt  main.c  output  singleCommandHandler.c  singleCommandHandler.h  special.c  special.h  stringparsing.c  stringparsing.h  test.txt  vector.c  vector.h
